--- a/app/views/movie_templates/show.html.erb
+++ b/app/views/movie_templates/show.html.erb
@@ -6,6 +6,11 @@
   Go back
 </a>
 
+<div>
+  <a href="/delete_movie/<%= @the_movie.id %>">Delete movie</a>
+  
+</div>
+
 <hr>
 
 <dl>
@@ -49,27 +54,31 @@
   </dt>
   <dd>
     <% dir_id = @the_movie.director_id %>
-    
+
     <% matching_directors = Director.where({ :id => dir_id }) %>
-    
+
     <% the_director = matching_directors.at(0) %>
 
-    <%= the_director.name %>
-  </dd>
+    <% if the_director == nil %>
+      Uh oh! We weren't able to find a director for this movie.
+    <% else %>
+      <%= the_director.name %>
+    <% end %>
+</dd>
 
-  <dt>
-    Created at
-  </dt>
-  <dd>
-    <%= @the_movie.created_at %>
-  </dd>
+<dt>
+  Created at
+</dt>
+<dd>
+  <%= @the_movie.created_at %>
+</dd>
 
-  <dt>
-    Updated at
-  </dt>
-  <dd>
-    <%= @the_movie.updated_at %>
-  </dd>
+<dt>
+  Updated at
+</dt>
+<dd>
+  <%= @the_movie.updated_at %>
+</dd>
 </dl>
 
 <hr>
