72/72 actors/directors/movies done

--- a/app/views/actor_templates/index.html.erb
+++ b/app/views/actor_templates/index.html.erb
@@ -4,6 +4,32 @@
 
 <hr>
 
+<form action="/insert_actor_record" method="post">
+  <div>
+    <label for="name_a_field">Name</label>
+    <input id="name_a_field" type="text" name="the_a_name">
+  </div>
+
+  <div>
+    <label for="dob_a_field">Dob</label>
+    <input id="dob_a_field" type="date" name="the_a_dob">
+  </div>
+
+  <div>
+    <label for="bio_a_field">Bio</label>
+    <input id="bio_a_field" type="text" name="the_a_bio">
+  </div>
+
+  <div>
+    <label for="image_a_field">Image</label>
+    <input id="image_a_field" type="text" name="the_a_image">
+  </div>
+
+  <button>
+    Create actor
+  </button>
+</form>
+
 <table border="1">
   <tr>
     <th>
