--- a/app/views/actor_templates/show.html.erb
+++ b/app/views/actor_templates/show.html.erb
@@ -8,6 +8,39 @@
 
 <hr>
 
+<div>
+  <a href="/delete_actor/<%= @the_actor.id %>">Delete actor</a>
+
+</div>
+
+<hr>
+
+<form action="/modify_actor_record/<%= @the_actor.id%>" method="post">
+  <div>
+    <label for="name_a_field">Name</label>
+    <input id="name_a_field" type="text" name="the_a_name" value="<%= @the_actor.name %>">
+  </div>
+
+  <div>
+    <label for="dob_a_field">Dob</label>
+    <input id="dob_a_field" type="date" name="the_a_dob" value="<%= @the_actor.dob %>">
+  </div>
+
+  <div>
+    <label for="bio_a_field">Bio</label>
+    <input id="bio_a_field" type="text" name="the_a_bio" value="<%= @the_actor.bio %>">
+  </div>
+
+  <div>
+    <label for="image_a_field">Image</label>
+    <input id="image_a_field" type="text" name="the_a_image" value="<%= @the_actor.image %>">
+  </div>
+
+  <button>
+    Update actor
+  </button>
+</form>
+
 <dl>
   <dt>
     Name
