--- a/app/views/director_templates/index.html.erb
+++ b/app/views/director_templates/index.html.erb
@@ -4,6 +4,32 @@
 
 <hr>
 
+<form action="/insert_director_record" method="post">
+  <div>
+    <label for="name_d_field">Name</label>
+    <input id="name_d_field" type="text" name="the_d_name">
+  </div>
+
+  <div>
+    <label for="dob_d_field">Dob</label>
+    <input id="dob_d_field" type="date" name="the_d_dob">
+  </div>
+
+  <div>
+    <label for="bio_d_field">Bio</label>
+    <input id="bio_d_field" type="text" name="the_d_bio">
+  </div>
+
+  <div>
+    <label for="image_d_field">Image</label>
+    <input id="image_d_field" type="text" name="the_d_image">
+  </div>
+
+  <button>
+    Create director
+  </button>
+</form>
+
 <table border="1">
   <tr>
     <th>
@@ -27,28 +53,28 @@
   </tr>
 
   <% @list_of_directors.each do |director| %>
-  <tr>
-    <td>
-      <%= director.id %>
-    </td>
+    <tr>
+      <td>
+        <%= director.id %>
+      </td>
 
-    <td>
-      <img src="<%= director.image %>" style="width:250px;">
-    </td>
+      <td>
+        <img src="<%= director.image %>" style="width:250px;">
+      </td>
 
-    <td>
-      <%= director.name %>
-    </td>
+      <td>
+        <%= director.name %>
+      </td>
 
-    <td>
-      <%= director.dob %>
-    </td>
+      <td>
+        <%= director.dob %>
+      </td>
 
-    <td>
-      <a href="/directors/<%= director.id %>">
-        Show details
-      </a>
-    </td>
-  </tr>
+      <td>
+        <a href="/directors/<%= director.id %>">
+          Show details
+        </a>
+      </td>
+    </tr>
   <% end %>
 </table>
